# argon2min

./: Cargo.toml  README.md
benches/: constant_eq.rs  versus_cargon.rs
benches/cargon/: build.rs
examples/: cli.rs  helloworld.rs  verifier.rs
src/: argon2.rs  block.rs  verifier.rs
