[package]
name = "aingle-argon2"
version = "0.1.0"
authors = ["Apilium Technologies <hello@apilium.com>"]
repository = "https://github.com/ApiliumCode/argon2min"
homepage = "https://apilium.com"
documentation = "https://docs.rs/aingle-argon2"
description = "Pure Rust Argon2 password hashing - optimized for AIngle"
readme = "README.md"
keywords = ["aingle", "argon2", "crypto", "hash", "password"]
categories = ["cryptography"]
license = "MIT"
edition = "2021"
rust-version = "1.89"

[lib]
name = "aingle_argon2"

[features]
default = []

[dependencies]
blake2 = "0.10"

[profile.bench]
lto = true
